# khangman

./: CMakeLists.txt
debian/: changelog  (+3 more)
po/: CMakeLists.txt
po/ar/: khangman.po
po/be/: khangman.po
po/bg/: khangman.po
po/bs/: khangman.po
po/ca/: khangman.po
po/ca/data/khangman/: CMakeLists.txt
po/ca/docs/khangman/: index.docbook  man-khangman.6.docbook
po/cs/: khangman.po
po/cs/data/khangman/: CMakeLists.txt
po/da/: khangman.po
po/da/data/khangman/: CMakeLists.txt
po/de/: khangman.po
po/de/data/khangman/: CMakeLists.txt
po/el/: khangman.po
po/eo/: khangman.po
po/es/: khangman.po
po/es/data/khangman/: CMakeLists.txt
po/et/: khangman.po
po/eu/: khangman.po
po/fa/: khangman.po
po/fi/: khangman.po
po/fr/: khangman.po
po/ga/: khangman.po
po/gl/: khangman.po
po/he/: khangman.po
po/hi/: khangman.po
po/hr/: khangman.po
po/hu/: khangman.po
po/is/: khangman.po
po/it/: khangman.po
po/ja/: khangman.po
po/kk/: khangman.po
po/km/: khangman.po
po/ko/: khangman.po
po/lt/: khangman.po
po/lv/: khangman.po
po/ml/: khangman.po
po/mr/: khangman.po
po/nb/: khangman.po
po/nds/: khangman.po
po/nl/: khangman.po
po/nn/: khangman.po
po/pa/: khangman.po
po/pl/: khangman.po
po/pt/: khangman.po
po/pt_BR/: khangman.po
po/ro/: khangman.po
po/ru/: khangman.po
po/se/: khangman.po
po/sk/: khangman.po
po/sl/: khangman.po
po/sq/: khangman.po
po/sv/: khangman.po
po/ta/: khangman.po
po/tg/: khangman.po
po/ug/: khangman.po
po/uk/: khangman.po
po/zh_CN/: khangman.po
po/zh_TW/: khangman.po
(+20 files in other folders)
